--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
   </head>
   <body>
 
+      <div class="title month">
 
-      <ul class="lista">
+      </div>
+      <div class="calendar">
 
-      </ul>
+      </div>
+
 
 
 <script id="template" type="text/x-handlebars-template">
-  <li >{{giorno}}</li>
+  <div class="day" >{{giorno}}</div>
 </script>
 
     <script src="main.js" type="text/javascript"></script>
