--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
     </script>
+    <script src="https://kit.fontawesome.com/34c946dad8.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/it.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -13,6 +14,11 @@
   <body>
 
       <div class="title month">
+
+      </div>
+      <div class="slide">
+        <span class="prev"><i class="fas fa-angle-left"></i>precedente</span>
+        <span class="next">successivo<i class="fas fa-angle-right"></i></span>
 
       </div>
       <div class="calendar">
