cambia dinamicamente il title ma non la pag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 <script id="template" type="text/x-handlebars-template">
-  <div class="day" >{{giorno}}</div>
+  <div data_month={{data_month}} class="day" >{{giorno}}</div>
 </script>
 
     <script src="main.js" type="text/javascript"></script>
