messaggio di stop inizio e fine

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div class="title month">
 
       </div>
+      <div class="end">
+
+      </div>
       <div class="slide">
         <span class="prev"><i class="fas fa-angle-left"></i>precedente</span>
         <span class="next">successivo<i class="fas fa-angle-right"></i></span>
