--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-      <div class="title month">
-
-      </div>
-      <div class="end">
+      <div class="happy">
 
       </div>
-      <div class="slide">
-        <span class="prev"><i class="fas fa-angle-left"></i>precedente</span>
-        <span class="next">successivo<i class="fas fa-angle-right"></i></span>
+        <div class="title month">
 
-      </div>
-      <div class="calendar">
+        </div>
+        <div class="end">
 
-      </div>
+        </div>
+        <div class="slide">
+          <span class="prev"><i class="fas fa-angle-left"></i>precedente</span>
+          <span class="next">successivo<i class="fas fa-angle-right"></i></span>
+
+        </div>
+        <div class="calendar">
+
+        </div>
 
 
 
